# brutefeedparser

./: Makefile  README.md  pyproject.toml
brutefeedparser/: __init__.py  brutefeedparser.py
tests/: fakeinternetdata.py  test_brutefeedparser.py
tests/fake/: codeproject.py  geekwirecom.py  hackernews.py  indexhu.py  reddit.py  thehill.py  warhammercommunity.py  youtube.py
